[7-53] UI: Fix message-info on small screen

--- a/exalearn-ui/src/app/components/start-content/start-content.component.scss
+++ b/exalearn-ui/src/app/components/start-content/start-content.component.scss
@@ -19,6 +19,7 @@
 		margin-bottom: 20px;
 		font-size: 20px;
 		letter-spacing: 1px;
+		text-align: center;
 
 		.label {
 			color: $light-blue;
@@ -37,13 +38,16 @@
 	}
 }
 
+.check-out-btn {
+	font-size: 20px;
+	text-decoration: none;
+}
+
 @include media(min, M) {
 	.start-info {
 		padding: 0;
 	}
 }
 
-.check-out-btn {
-	font-size: 20px;
-	text-decoration: none;
+@include media(max, S) {
 }
